# JiKong_server_v2.0

./: CMakeLists.txt  README.md
doc/: Makefile_20121130  readme.txt  strip.sh  需求
doc/cmake/arm/: CMakeLists.txt
doc/cmake/x86/: CMakeLists.txt
doc/curl/: aarm.sh  aax86.sh
doc/curl/20130606bk/: aarm.sh  aax86.sh
doc/liblua/: tempfile.c
doc/sqlite/: aax86.sh
lib/libif/: Makefile  Makefile.backup  tempfile.c
src/: CMakeLists.txt  Jikong.IAB  Jikong.IAD  Jikong.IMB  Jikong.IMD  Jikong.PFI  Jikong.PO  Jikong.PR  Jikong.PRI  Jikong.PS  Jikong.SearchResults  Jikong.WK3
src/Components/: CMakeLists.txt
src/Components/FLXCommon/: CMakeLists.txt  flxdefines.h  flxnettypes.h  flxtypes.h
src/Components/FLXNetWork/: CMakeLists.txt  tcpserver.c  tcpserver.h
src/Components/FLXNetWork/old/: FLXNetWork.rar  makefile-server-lib
src/Components/FLXThread/: CMakeLists.txt  flxthread.h  thread.c
src/Components/FLXThread/old/: FLXThread.rar  makefile-thread-lib  makefile-thread-static-lib
src/ccc_cli/: CMakeLists.txt  ccc_cli.c  ccc_cli.h  ccc_command.c  ccc_command.h  ipc_msg.c  ipc_msg.h
src/configure/: CMakeLists.txt  config_info.h  configure.c  configure.h  db_config.c  db_config.h  db_irda.c  db_irda.h  db_table_main.c  db_table_main.h  db_table_updown.c  db_table_updown.h  db_utils.c  db_utils.h  sqlite_key.h
src/console/: CMakeLists.txt  app_console.c  app_console.h  cmdedit.c  safe_read.c
src/data_pool/: CMakeLists.txt  ccc_data_interface.c  ccc_data_interface.h  ccc_data_pool.c  ccc_data_pool.h  cccdp_recv.c  cccdp_recv.h  cccdp_recv_buffer.c  cccdp_recv_buffer.h  cccdp_send.c  cccdp_send.h  cccdp_send_queue.h
src/device_controller/: CMakeLists.txt  devc_fpga_irda.c  devc_fpga_irda.h  devc_fpga_relay.c  devc_fpga_relay.h  devc_fpga_serial.c  devc_fpga_serial.h  device_manager.c  device_manager.h  fpga_serial_manager.c  fpga_serial_manager.h
src/device_controller/old/: devc_serial_port.c  devc_serial_port.h  devc_wp_serial_port.tttt
src/device_interface/: CMakeLists.txt  devi_protocol.h  device_interface.c  device_interface.h
src/device_interface/old/: devi_fpga_irda.c  devi_fpga_relay.c  devi_serial_port.c  devi_serial_port.h
src/file_deal/: CMakeLists.txt  download_file.c  download_file.h  fd_file_up_download.c  fd_file_up_download.h  md5sum.c  upload_file.c  upload_file.h
src/junction/: CMakeLists.txt  junction.c  junction.h
src/libghttp/: aarm.sh  aax86.sh
src/lua/: CMakeLists.txt
src/main/: CMakeLists.txt  ccc_config.h  ccc_main.c  ccc_monitor.c  indicator_lamp.c  indicator_lamp.h
src/others/: CMakeLists.txt
src/others/ini_rw/: inifile.c  inifile.h
src/packet_pool/: CMakeLists.txt  ccc_packet.c  ccc_packet.h  packet_pool.c  packet_pool.h
src/protocol/: CMakeLists.txt  protocol.h  protocol_core.c  protocol_core.h  protocol_define.h  protocol_http.c  protocol_http.h  protocol_infrared.c  protocol_infrared.h
src/protocol_adapter/: CMakeLists.txt  devi_proto_data.c  devi_proto_data.h  protocol_adapter.c  protocol_adapter.h  telnet_info.c  telnet_info.h
src/so4ui/: CMakeLists.txt  devi_wrap4lua.c  devi_wrap4lua.h  so4ui.c  strip.sh
src/sqlite/: aarm.sh  tt.sh
src/tcp_server/: CMakeLists.txt  connect_http.c  connect_http.h  connect_list.c  connect_list.h  connect_manager.c  connect_manager.h  connecting_list.c  connecting_list.h  curl_wrapper.c  curl_wrapper.h  ghttp_wrapper.c  ghttp_wrapper.h  tcp_share_type.h  tps_client_manage.c  tps_client_manage.h  tps_tcp_server.c  tps_tcp_server.h  tps_tcp_slave_client.c  tps_tcp_slave_client.h  wol.c  wol.h
src/tcp_server/old/: ccc_data_buffer.c  ccc_data_buffer.h  curl_wrapper_old.c  discard.txt  recv_buffer.c  recv_buffer.h
src/ui_library/: CMakeLists.txt  hmui_event_deal.c  hmui_serial_port串口状态返回监听.c  luaconf.h  tempfile.c  ui_library_wrapper.c  ui_library_wrapper.h
src/utils/: CMakeLists.txt  ring_list.c  ring_list.h  ring_list_buf.c  ring_list_buf.h  share_type.h  sysconfig.c  sysconfig.h  util_func.c  util_func.h  util_list.c  util_list.h  util_log.c  util_log.h  util_queue.c  util_queue.h
