# ------------ target ------------
ADD_SUBDIRECTORY(utils)
ADD_SUBDIRECTORY(Components)
ADD_SUBDIRECTORY(configure)
ADD_SUBDIRECTORY(lua)

ADD_SUBDIRECTORY(device_controller)
ADD_SUBDIRECTORY(ui_library)
ADD_SUBDIRECTORY(protocol)
ADD_SUBDIRECTORY(protocol_adapter)
ADD_SUBDIRECTORY(junction)
ADD_SUBDIRECTORY(tcp_server)
ADD_SUBDIRECTORY(file_deal)
ADD_SUBDIRECTORY(device_interface)
ADD_SUBDIRECTORY(data_pool)
ADD_SUBDIRECTORY(packet_pool)

ADD_SUBDIRECTORY(ccc_cli)
ADD_SUBDIRECTORY(console)

ADD_SUBDIRECTORY(main)
ADD_SUBDIRECTORY(so4ui)
